3rdparty/jasper-version-4.2.0/data/test/bad/353.pnm
P28 8
400
300000000000000000000000000 0
0 0 0 0 0 0 